--- a/index.template.html
+++ b/index.template.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <!-- Primary Meta Tags -->
     <title>MyNEKOWallet</title>
-    <meta name="title" content="MyNEKOWallet" />
+    <meta name="title" content="MyNEKOWallet ZENZO (ZNZ)" />
     <meta name="description" content="The wallet of the future - Receive, Send, Stake and Exchange using a completely decentralized, open-source, battle-hardened ZENZO wallet." />
     <meta name="keywords" content="web,wallet,webwallet,crypto,cryptocurrency,opensource,oss,zenzo,staking,masternodes,exchange,swap,decentralized" />
 
@@ -17,24 +17,24 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_GB" />
-    <meta property="og:url" content="https://mypivxwallet.org/" />
-    <meta property="og:title" content="MyNEKOWallet" />
+    <meta property="og:url" content="https://mynekowallet.alloyxuast.co.uk/zenzo/" />
+    <meta property="og:title" content="MyNEKOWallet ZENZO (ZNZ)" />
     <meta property="og:description" content="The wallet of the future - Receive, Send, Stake and Exchange using a completely decentralized, open-source, battle-hardened ZENZO wallet." />
     <meta property="og:image" content="/logo_opaque-dark-bg.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://mypivxwallet.org/" />
-    <meta property="twitter:title" content="MyNEKOWallet" />
+    <meta property="twitter:url" content="https://mynekowallet.alloyxuast.co.uk/zenzo/" />
+    <meta property="twitter:title" content="MyNEKOWallet ZENZO (ZNZ)" />
     <meta property="twitter:description" content="The wallet of the future - Receive, Send, Stake and Exchange using a completely decentralized, open-source, battle-hardened ZENZO wallet." />
     <meta property="twitter:image" content="/logo_opaque-dark-bg.png" />
 
     <!-- Colour Theme -->
-    <meta name="msapplication-TileColor" content="#470e75" />
-    <meta name="theme-color" content="#470e75" />
+    <meta name="msapplication-TileColor" content="#00ffff" />
+    <meta name="theme-color" content="#00ffff" />
 
     <link rel="icon" type="image/png" href="/logo_opaque-dark-bg.png" />
-    <link rel="canonical" href="https://mypivxwallet.org/" />
+    <link rel="canonical" href="https://mynekowallet.alloyxuast.co.uk/zenzo/" />
   </head>
 
   <body>
@@ -324,7 +324,7 @@
 
             <div class="col-4 footer-icons text-right">
               <a href="https://github.com/NekoCryptoWallet/MyNEKOWallet" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
-              <a href="https://discord.gg/zTScGaGtgv" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-discord"></i></a>
+              <a href="https://discord.gg/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-discord"></i></a>
             </div>
           </div>
 
